Address BrainLogParser class comments
Signed-off-by: Songkan Tang <songkant@amazon.com>